<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.background.eraser.EraserActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/primary_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back_btn"
        android:contentDescription="@string/back_btn_disc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/eraser"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/done"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_corner_secondary_box"
        android:gravity="center"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_unit_eraser"
        app:layout_constraintBottom_toTopOf="@+id/mainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/done" />

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/option_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adView" />

    <ImageView
        android:id="@+id/option_btn"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/option_disc"
        android:src="@drawable/ic_option"
        app:layout_constraintBottom_toTopOf="@+id/manual_eraser"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/undo_edit_sticker"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/undo_disc"
        android:src="@drawable/ic_undo"
        app:layout_constraintBottom_toTopOf="@+id/manual_eraser"
        app:layout_constraintEnd_toStartOf="@id/redo_edit_sticker"

        app:layout_constraintStart_toEndOf="@id/option_btn"


        />

  <!--  <ImageView
        android:id="@+id/option_btn"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/option_disc"
        android:src="@drawable/ic_option"
        app:layout_constraintBottom_toTopOf="@+id/manual_eraser"
        app:layout_constraintEnd_toStartOf="@id/colorButton"
        app:layout_constraintStart_toEndOf="@id/replace" />-->

    <ImageView
        android:id="@+id/redo_edit_sticker"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/redo_disc"
        android:src="@drawable/ic_redo"
        app:layout_constraintBottom_toTopOf="@+id/manual_eraser"
        app:layout_constraintStart_toEndOf="@id/undo_edit_sticker"

        app:layout_constraintEnd_toStartOf="@id/colorButton"

        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/colorButton"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toTopOf="@+id/mirror"
        app:layout_constraintEnd_toEndOf="parent"
        app:riv_corner_radius="20dp" />

    <LinearLayout
        android:id="@+id/zoom"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_secondary_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/manual_eraser"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/zoom_icon"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/zoom"
            android:contentDescription="@string/zoom"/>

        <TextView
            android:id="@+id/zoom_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/zoom"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/manual_eraser"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_secondary_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restore"
        app:layout_constraintStart_toEndOf="@+id/zoom">

        <ImageView
            android:id="@+id/manual_icon"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/manual"
            android:src="@drawable/manual_minus" />

        <TextView
            android:id="@+id/manual_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/manual"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/restore"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_secondary_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/magic_eraser"
        app:layout_constraintStart_toEndOf="@+id/manual_eraser">

        <ImageView
            android:id="@+id/restore_icon"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/restore"
            android:src="@drawable/manual_plus" />

        <TextView
            android:id="@+id/restore_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/restore"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/magic_eraser"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_secondary_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mirror"
        app:layout_constraintStart_toEndOf="@+id/restore">

        <ImageView
            android:id="@+id/magic_icon"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/magic"
            android:src="@drawable/magic_plus" />

        <TextView
            android:id="@+id/magic_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/magic"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mirror"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_secondary_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/magic_eraser">

        <ImageView
            android:id="@+id/mirror_icon"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/mirror"
            android:src="@drawable/flip_horizontal" />

        <TextView
            android:id="@+id/mirror_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/mirror"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
